--- a/stackl-agent/values.yaml
+++ b/stackl-agent/values.yaml
@@ -4,7 +4,7 @@ image:
 mode: prod
 
 stacklAgent:
-  image: stacklio/stackl-agent:0.2.0dev
+  image: stacklio/stackl-agent:0.2.0rc1
   name: stackl-agent
   replicaCount: 1
   stacklHost:  stackl-core:8080
