--- a/stackl/templates/stackl-core/deployment.yaml
+++ b/stackl/templates/stackl-core/deployment.yaml
@@ -43,12 +43,12 @@ spec:
               value: "{{ .Values.datastore.path }}"
             - name: "STACKL_TASK_BROKER"
               value: "{{ .Values.taskBroker.type }}"
-            - name: "STACKL_AGENT_BROKER"
-              value: "{{ .Values.agentBroker.type }}"
             - name: "STACKL_MESSAGE_CHANNEL"
               value: "{{ .Values.messageChannel.type }}"
             - name: "LOGLEVEL"
               value: "DEBUG"
+            - name: "REDIS_HOST"
+              value: "{{ template "stackl.redis" . }}"
             - name: "STACKL_REDIS_HOST"
               value: "{{ template "stackl.redis" . }}"
             - name: "STACKL_OPA_HOST"
