Give pods logs rights to job pod

--- a/stackl-agent/templates/stackl-agent/service-account.yaml
+++ b/stackl-agent/templates/stackl-agent/service-account.yaml
@@ -24,6 +24,14 @@ rules:
       - get
       - list
       - delete
+  - apiGroups:
+      - ""
+    resources:
+      - pods
+      - pods/log
+    verbs:
+      - get
+      - list
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
