--- a/stackl-agent/values.yaml
+++ b/stackl-agent/values.yaml
@@ -4,11 +4,11 @@ image:
 mode: prod
 
 stacklAgent:
-  image: stacklio/stackl-agent:0.2.0rc1
+  image: stacklio/stackl-agent:v0.2.0
   name: stackl-agent
   replicaCount: 1
   stacklHost:  stackl-core:8080
-  secretHandler: base64
+  secretHandler: conjur
   agentName: common
   agentType: kubernetes
   redisHost: stackl-redis
@@ -16,6 +16,15 @@ stacklAgent:
   # vaultAddr: https://vault.example.com
   # vaultRole: stackl
   # vaultMountPoint: auth/kubernetes
+  conjurVerify: "False"
+  authenticatorClientContainerName: conjur-auth-client
+  conjurApplianceUrl: https://conjur-conjur-oss.conjur.svc.cluster.local
+  conjurAccount: default
+  conjurAuthnTokenFile: /run/conjur/access-token
+  conjurAuthnUrl: https://conjur-conjur-oss.conjur.svc.cluster.local/authn-k8s/stackl
+  conjurAuthnLogin: host/conjur/authn-k8s/stackl/apps/conjur-namespaceke
+  conjurSslConfigMap: conjur-cert
+  conjurSslConfigMapKey: ssl-certificate
 
 # example imagePullSecrets: [name: pull-secret-name]
 imagePullSecrets: []
