--- a/stackl-agent/templates/stackl-agent/service-account.yaml
+++ b/stackl-agent/templates/stackl-agent/service-account.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "stackl.agent" . }}-stackl-agent
+  name: {{ template "stackl.agent" . }}
   labels:
     {{ include "stackl.labels" . | nindent 4 }}
     component: agent
@@ -10,7 +10,7 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ template "stackl.agent" . }}-stackl-jobs
+  name: {{ template "stackl.agent" . }}-jobs
   labels:
     {{ include "stackl.labels" . | nindent 4 }}
     component: agent
@@ -39,12 +39,12 @@ metadata:
   labels:
     {{ include "stackl.labels" . | nindent 4 }}
     component: agent
-  name: {{ template "stackl.agent" . }}-stackl-agent
+  name: {{ template "stackl.agent" . }}
 roleRef:
-  name: {{ template "stackl.agent" . }}-stackl-jobs
+  name: {{ template "stackl.agent" . }}-jobs
   kind: Role
   apiGroup: rbac.authorization.k8s.io
 subjects:
   - kind: ServiceAccount
-    name: {{ template "stackl.agent" . }}-stackl-agent
+    name: {{ template "stackl.agent" . }}
     namespace: {{ .Release.Namespace }}
