--- a/stackl/templates/stackl-core/deployment.yaml
+++ b/stackl/templates/stackl-core/deployment.yaml
@@ -43,10 +43,10 @@ spec:
               value: "{{ .Values.datastore.path }}"
             - name: "LOGLEVEL"
               value: "DEBUG"
-            - name: "REDIS_HOST"
-              value: "{{ template "stackl.redis" . }}"
             - name: "STACKL_REDIS_HOST"
               value: "{{ template "stackl.redis" . }}"
+            - name: "STACKL_REDIS_PORT"
+              value: "6379"
             - name: "STACKL_OPA_HOST"
               value: "{{ template "stackl.opa" . }}:8181"
             - name: "WEB_CONCURRENCY"
