Stackl cli image

--- a/stackl-agent/templates/stackl-agent/deployment.yaml
+++ b/stackl-agent/templates/stackl-agent/deployment.yaml
@@ -52,6 +52,8 @@ spec:
               value: "{{ .Values.stacklAgent.redisHost }}"
             - name: "REDIS_PORT"
               value: "{{ .Values.stacklAgent.redisPort }}"
+            - name: "STACKL_CLI_IMAGE"
+              value: "{{ .Values.stacklAgent.stacklCliImage }}"
             {{- with .Values.stacklAgent.vaultAddr }}
             - name: "VAULT_ADDR"
               value: "{{ . }}"
