--- a/stackl/Chart.yaml
+++ b/stackl/Chart.yaml
@@ -1,9 +1,13 @@
 apiVersion: v2
 name: stackl
-description: Stackl description
-
+description: Stackl Helm chart
 type: application
-
-version: v0.2.2
-
-appVersion: v0.2.2
+version: v0.2.5
+appVersion: v0.2.5
+maintainers:
+  - name: GBrawl
+    email: frederic.vanreet@icloud.com
+    url: https://github.com/gbrawl
+  - name: stgrace
+    email: stefgraces@hotmail.com
+    url: https://github.com/stgrace
