Add imagePullSecret to serviceAccount

--- a/stackl-agent/templates/stackl-agent/service-account.yaml
+++ b/stackl-agent/templates/stackl-agent/service-account.yaml
@@ -6,6 +6,10 @@ metadata:
   labels:
     {{ include "stackl.labels" . | nindent 4 }}
     component: agent
+{{- with .Values.agentServiceAccount.imagePullSecrets }}
+imagePullSecrets:
+  {{- toYaml . | nindent 2}}
+{{- end}}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
