Add Vault image option to stackl-agent chart

--- a/stackl-agent/templates/stackl-agent/deployment.yaml
+++ b/stackl-agent/templates/stackl-agent/deployment.yaml
@@ -77,6 +77,10 @@ spec:
             - name: "VAULT_MOUNT_POINT"
               value: "{{ . }}"
             {{- end }}
+            {{- with .Values.stacklAgent.secretHandler.vault.vaultImage }}
+            - name: "VAULT_IMAGE"
+              value: "{{ . }}"
+            {{- end }}
             {{- end }}
             {{- if eq .Values.stacklAgent.secretHandler.type "conjur" }}
             {{- with .Values.stacklAgent.secretHandler.conjur.conjurVerify }}
